# sf-cam

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  cfg.toml.example  diagram.json  sdkconfig.defaults  wokwi.toml
.cargo/: config.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  rust_ci.yml
docs/: README.md
scripts/: flash.sh
src/: esp_camera.rs  espcam.rs  lib.rs  main.rs
