[package]
name = "sf-cam"
version = "0.1.0"
authors = ["Ellis Hoag <ellis.sparky.hoag@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "sf-cam"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "z"

[profile.dev]
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]
esp-idf-hal = "0.44.1"
esp-idf-svc = { version = "0.49", default-features = false }
esp-idf-sys = "0.35.0"
anyhow = "1.0.89"
log = "0.4.22"
toml-cfg = "0.2.0"

[[package.metadata.esp-idf-sys.extra_components]]
component_dirs = "components/esp32-camera"
bindings_header = "components/bindings.h"
bindings_module = "camera"

[build-dependencies]
embuild = "0.32.0"
toml-cfg = "0.2.0"