[package]
name = "sf-cam"
version = "0.1.0"
authors = ["Ellis Hoag <ellis.sparky.hoag@gmail.com>"]
edition = "2021"
license = "MIT"

[dependencies]
esp-idf-hal = "0.44.1"
esp-idf-svc = { version = "0.49", features = ["alloc"] }
esp-idf-sys = "0.35.0"
anyhow = "1.0.89"
log = "0.4.22"
toml-cfg = "0.2.0"
humantime = "2.1.0"

[[package.metadata.esp-idf-sys.extra_components]]
component_dirs = "components/esp32-camera"
bindings_header = "components/bindings.h"
bindings_module = "camera"

[build-dependencies]
embuild = "0.32.0"
toml-cfg = "0.2.0"

[profile.release]
opt-level = "z"

[profile.dev]
opt-level = "z"
