[package]
name = "sf-cam"
version = "0.1.0"
authors = ["Ellis Hoag <ellis.sparky.hoag@gmail.com>"]
edition = "2021"
license = "MIT"

[dependencies]
# TODO: Need a recent hash to support the new "MountedFatfs::mount()" API.
esp-idf-hal = { git = "https://github.com/esp-rs/esp-idf-hal.git", rev = "97c01ef814d75f43d9155a9876ef440a7f5a3cc0" }
esp-idf-svc = { git = "https://github.com/ellishg/esp-idf-svc.git", rev = "0d3675f89ee072c91f9133a91877ff62f5147112", features = ["experimental"] }
esp-idf-sys = "0.35.0"
anyhow = "1.0.89"
log = "0.4.22"
toml-cfg = "0.2.0"
humantime = "2.1.0"
image = { version = "0.25.5", features = ["gif"] }

[[package.metadata.esp-idf-sys.extra_components]]
component_dirs = "components/esp32-camera"
bindings_header = "components/bindings.h"
bindings_module = "camera"

[build-dependencies]
embuild = "0.32.0"
toml-cfg = "0.2.0"

[profile.release]
# opt-level = "z"
lto = true
codegen-units = 1
# strip = true
# panic = "abort"

[profile.dev]
opt-level = "z"
